chore(cypress): add tests folder to open command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "cy:open": "cd ./tests && cypress open"
+    "cy:open": "cypress open --project tests"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
