--- a/.github/workflows/validate-deploy.yml
+++ b/.github/workflows/validate-deploy.yml
@@ -12,23 +12,48 @@ on:
       - master
 
 jobs:
-  validate:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-24.04
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Cypress install
+        uses: cypress-io/github-action@v6
         with:
-          node-version: '22'
-      - name: Install dependencies
-        run: npm install
-      - name: Run build
-        run: npm run build
+          # Disable running of tests within install job
+          runTests: false
+          build: npm run build
+
+      - name: Save build folder
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          if-no-files-found: error
+          path: build
+
+  cypress:
+    runs-on: ubuntu-24.04
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download the build folder
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          start: npm run dev
+          browser: chrome
 
   deploy:
-    needs: validate
-    runs-on: ubuntu-latest
+    needs: cypress
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
